[package]
name = "carina-libgo"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A go library for Rust"
repository = "https://github.com/cariers/carina-libgo"
documentation = "https://docs.rs/carina-libgo"
readme = "README.md"
keywords = ["libgo", "go", "sgf", "gtp"]
categories = []

[features]
default = ["sgf", "gtp"]
gtp = []
sgf = ["sgf-parse"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sgf-parse = { version = "4.2.3", optional = true }
thiserror = "2.0.12"
